--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ openai>=1.12.0
 # ============================================================================
 streamlit>=1.28.0
 plotly>=5.17.0
+openpyxl>=3.0.0
 
 # Additional Dependencies (auto-installed with above packages)
 # ============================================================================
