--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,10 @@ streamlit>=1.28.0
 plotly>=5.17.0
 openpyxl>=3.0.0
 
+# WSGI Server for Azure
+# ============================================================================
+gunicorn>=20.1.0
+
 # Additional Dependencies (auto-installed with above packages)
 # ============================================================================
 # python-dateutil (via pandas)
